--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           <i class="fas fa-bars hide icon-button" onclick="openNav()"></i>
           <i class="fas fa-search icon-button" onclick="openSearchBox()"></i>
           <span id="input-area">
-            <input type="text" id="search-input" placeholder="search" onkeyup="enterkey();"/>
-            <button class="search" id="search-button">Go</i></button>
+            <input class="input-box" type="text" id="search-input" placeholder="search" onkeyup="enterkey();"/>
+            <button class="search-box" id="search-button">Go</i></button>
           </span>
         </div>
         
@@ -91,7 +91,7 @@
         </div>
         <div class="col-lg-8">
           <h1>안녕하세요</h1>
-          <p>ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</p>
+          <p></p>
           <div>KBS * 2022-04-18</div>
         </div>
       </div>   
