--- a/index.html
+++ b/index.html
@@ -85,14 +85,12 @@
       <div class="row news">
         <div class="col-lg-4">
           <img
-            class="news-img-size"
-            src="https://blog.kakaocdn.net/dn/wc17H/btrhS3UEkv2/w0ebCB8v3YpQWVWM1mxffK/img.jpg"
           />
         </div>
         <div class="col-lg-8">
-          <h1>안녕하세요</h1>
+          <h1></h1>
           <p></p>
-          <div>KBS * 2022-04-18</div>
+          <div></div>
         </div>
       </div>   
     </section>
